tests/ui/consts/const_in_pattern/issue-34784-match-on-non-int-raw-ptr.stderr
error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon
  --> $DIR/issue-34784-match-on-non-int-raw-ptr.rs:9:9
   |
LL | const C: *const u8 = &0;
   | ------------------ constant defined here
...
LL |         C => {}
   |         ^ can't be used in patterns
   |
   = note: see https://github.com/rust-lang/rust/issues/70861 for details

error: aborting due to 1 previous error

